Added the connection string to the MS SQL DB

--- a/NotifyMe.API/appsettings.json
+++ b/NotifyMe.API/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=localhost;Database=NotifyMeDB;user id=sa;password=qXz999W7M#;Max Pool Size=50000;Pooling=True;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
