--- a/NotifyMe.API/appsettings.json
+++ b/NotifyMe.API/appsettings.json
@@ -1,7 +1,7 @@
 {
   "ConnectionStrings": {
     //"DefaultConnection": "Server=localhost;Database=NotifyMeDB;user id=sa;password=qXz999W7M#;Max Pool Size=50000;Pooling=True;",
-    "DefaultConnection": "Server=localhost,1433;Database=notifymedb;User Id=sa;Password=qXz999W7M#",
+    "DefaultConnection": "Server=localhost\\SQLEXPRESS;Database=notifymedb;user id=sa;password=qXz999W7M#;",
     "RabbitMQHost": "localhost"
   },
   "Logging": {
