The first launch of the application

--- a/NotifyMe.API/appsettings.json
+++ b/NotifyMe.API/appsettings.json
@@ -3,7 +3,9 @@
     //"DefaultConnection": "Server=localhost;Database=NotifyMeDB;user id=sa;password=qXz999W7M#;Max Pool Size=50000;Pooling=True;",
     "DefaultConnection": "Server=localhost;Database=notifymedb;user id=sa;password=qXz999W7M#;TrustServerCertificate=True",
     //"DefaultConnection": "Server=DESKTOP-O5SR0H0\\SQLEXPRESS;Database=myDataBase;Trusted_Connection=True;TrustServerCertificate=True;",
-    "RabbitMQHost": "localhost"
+    "RabbitMQHost": "localhost",
+    "RabbitMQUsername": "guest",
+    "RabbitMQPassword": "guest"
   },
   "Logging": {
     "LogLevel": {
