--- a/NotifyMe.API/NotifyMe.API.csproj
+++ b/NotifyMe.API/NotifyMe.API.csproj
@@ -14,6 +14,9 @@
     <Content Remove="Models\**" />
     <EmbeddedResource Remove="Models\**" />
     <None Remove="Models\**" />
+    <Content Update="wwwroot\js\site.js">
+      <CopyToOutputDirectory>Never</CopyToOutputDirectory>
+    </Content>
   </ItemGroup>
 
   <ItemGroup>
