Added RabbitMQ service

--- a/NotifyMe.API/NotifyMe.API.csproj
+++ b/NotifyMe.API/NotifyMe.API.csproj
@@ -73,5 +73,6 @@
     </PackageReference>
     <PackageReference Include="Microsoft.EntityFrameworkCore.Proxies" Version="7.0.10" />
     <PackageReference Include="RabbitMQ.Client" Version="6.5.0" />
+    <PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0" />
   </ItemGroup>
 </Project>
