--- a/NotifyMe.Consumer/NotifyMe.Consumer.csproj
+++ b/NotifyMe.Consumer/NotifyMe.Consumer.csproj
@@ -7,7 +7,22 @@
     </PropertyGroup>
 
     <ItemGroup>
+      <ProjectReference Include="..\NotifyMe.API\NotifyMe.API.csproj" />
       <ProjectReference Include="..\NotifyMe.IoC.Configuration\NotifyMe.IoC.Configuration.csproj" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.10" />
+      <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="7.0.10">
+        <PrivateAssets>all</PrivateAssets>
+        <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+      </PackageReference>
+      <PackageReference Include="Microsoft.EntityFrameworkCore.Proxies" Version="7.0.10" />
+      <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="7.0.10">
+        <PrivateAssets>all</PrivateAssets>
+        <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+      </PackageReference>
+      <PackageReference Include="RabbitMQ.Client" Version="6.5.0" />
     </ItemGroup>
 
 </Project>
