--- a/NotifyMe.Consumer/appsettings.json
+++ b/NotifyMe.Consumer/appsettings.json
@@ -1,4 +1,12 @@
 {
+  "ConnectionStrings": {
+    //"DefaultConnection": "Server=localhost;Database=NotifyMeDB;user id=sa;password=qXz999W7M#;Max Pool Size=50000;Pooling=True;",
+    "DefaultConnection": "Server=localhost;Database=NotifyMeDb;user id=sa;password=qXz999W7M#;TrustServerCertificate=True",
+    //"DefaultConnection": "Server=DESKTOP-O5SR0H0\\SQLEXPRESS;Database=myDataBase;Trusted_Connection=True;TrustServerCertificate=True;",
+    "RabbitMQHost": "localhost",
+    "RabbitMQUsername": "guest",
+    "RabbitMQPassword": "guest"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
