--- a/NotifyMe.Consumer/appsettings.json
+++ b/NotifyMe.Consumer/appsettings.json
@@ -1,11 +1,19 @@
 {
   "ConnectionStrings": {
     //"DefaultConnection": "Server=localhost;Database=NotifyMeDB;user id=sa;password=qXz999W7M#;Max Pool Size=50000;Pooling=True;",
-    "DefaultConnection": "Server=localhost;Database=NotifyMeDb;user id=sa;password=qXz999W7M#;TrustServerCertificate=True",
-    //"DefaultConnection": "Server=DESKTOP-O5SR0H0\\SQLEXPRESS;Database=myDataBase;Trusted_Connection=True;TrustServerCertificate=True;",
-    "RabbitMQHost": "localhost",
-    "RabbitMQUsername": "guest",
-    "RabbitMQPassword": "guest"
+    "DefaultConnection": "Server=localhost;Database=NotifyMeDb;user id=sa;password=qXz999W7M#;TrustServerCertificate=True"
+    //"DefaultConnection": "Server=DESKTOP-O5SR0H0\\SQLEXPRESS;Database=myDataBase;Trusted_Connection=True;TrustServerCertificate=True;"
+  },
+  "RabbitMq": {
+    "Host": "localhost",
+    "Username": "guest",
+    "Password": "guest",
+    "QueueName": "NotifyMeQueue",
+    "RetryCount": "5",
+    "DispatchConsumersAsync": true
+    //    "BrokerName": "test_broker",
+    //    "AutofacScopeName": "test_autofac",
+    //    "VirtualHost": "your_virtual_host",
   },
   "Logging": {
     "LogLevel": {
