--- a/NotifyMe.API/appsettings.json
+++ b/NotifyMe.API/appsettings.json
@@ -2,10 +2,12 @@
   "ConnectionStrings": {
     //"DefaultConnection": "Server=localhost;Database=NotifyMeDB;user id=sa;password=qXz999W7M#;Max Pool Size=50000;Pooling=True;",
     "DefaultConnection": "Server=localhost;Database=NotifyMeDb;user id=sa;password=qXz999W7M#;TrustServerCertificate=True"
+    //"DefaultConnection": "Server=mssql-server;Database=NotifyMeDb;user id=sa;password=qXz999W7M#;TrustServerCertificate=True"
     //"DefaultConnection": "Server=DESKTOP-O5SR0H0\\SQLEXPRESS;Database=myDataBase;Trusted_Connection=True;TrustServerCertificate=True;"
   },
   "RabbitMq": {
     "Host": "localhost",
+    //"Host": "rabbitmq",
     "Username": "guest",
     "Password": "guest",
     "QueueName": "NotifyMeQueue",
