--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,13 +8,18 @@ services:
         hostname: mssql-server
         restart: always
         environment:
-            SA_PASSWORD: qXz999W7M#
-            ACCEPT_EULA: Y
-            MSSQL_DB_NAME: notifymedb
+            - ACCEPT_EULA=Y
+            - SA_PASSWORD=qXz999W7M#
+            - MSSQL_PID=Express
+            - MSSQL_DB_NAME=NotifyMeDb
+            # ACCEPT_EULA: Y
+            # MSSQL_DB_NAME: NotifyMeDb
+            # SA_PASSWORD: qXz999W7M#
         ports:
             - "1433:1433"
         volumes:
-            - mssql_data:/var/opt/mssql
+            - sqlsystem:/var/opt/mssql
+            - sqldata:/var/opt/sqlserver/data
             - /etc/timezone:/etc/timezone:ro
             - /etc/localtime:/etc/localtime:ro
         healthcheck:
@@ -68,7 +73,8 @@ services:
             - notifyme-network
 
 volumes:
-  mssql_data:
+  sqlsystem:
+  sqldata:
   rabbitmq_data:
 
 networks:
