Devided the connection for local and server environment

--- a/NotifyMe.API/appsettings.json
+++ b/NotifyMe.API/appsettings.json
@@ -1,13 +1,11 @@
 {
   "ConnectionStrings": {
-    //"DefaultConnection": "Server=localhost;Database=NotifyMeDB;user id=sa;password=qXz999W7M#;Max Pool Size=50000;Pooling=True;",
-    "DefaultConnection": "Server=localhost;Database=NotifyMeDb;user id=sa;password=qXz999W7M#;TrustServerCertificate=True"
-    //"DefaultConnection": "Server=mssql-server;Database=NotifyMeDb;user id=sa;password=qXz999W7M#;TrustServerCertificate=True"
-    //"DefaultConnection": "Server=DESKTOP-O5SR0H0\\SQLEXPRESS;Database=myDataBase;Trusted_Connection=True;TrustServerCertificate=True;"
+    "LocalConnection": "Server=localhost;Database=NotifyMeDb;user id=sa;password=qXz999W7M#;TrustServerCertificate=True;Max Pool Size=50000;Pooling=True;",
+    "ServerConnection": "Server=mssql-server;Database=NotifyMeDb;user id=sa;password=qXz999W7M#;TrustServerCertificate=True;Max Pool Size=50000;Pooling=True;"
   },
   "RabbitMq": {
-    "Host": "localhost",
-    //"Host": "rabbitmq",
+    "LocalHost": "localhost",
+    "ServerHost": "rabbitmq",
     "Username": "guest",
     "Password": "guest",
     "QueueName": "NotifyMeQueue",
