Implemented launch of the app in the docker containers

--- a/NotifyMe.API/appsettings.json
+++ b/NotifyMe.API/appsettings.json
@@ -1,7 +1,7 @@
 {
   "ConnectionStrings": {
     "LocalConnection": "Server=localhost;Database=NotifyMeDb;user id=sa;password=qXz999W7M#;TrustServerCertificate=True;Max Pool Size=50000;Pooling=True;",
-    "ServerConnection": "Server=mssql-server;Database=NotifyMeDb;user id=sa;password=qXz999W7M#;TrustServerCertificate=True;Max Pool Size=50000;Pooling=True;"
+    "ServerConnection": "Server=mssql-server;Database=master;user id=sa;password=qXz999W7M#;TrustServerCertificate=True;Max Pool Size=50000;Pooling=True;"
   },
   "RabbitMq": {
     "LocalHost": "localhost",
