--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,13 +15,11 @@ services:
         ports:
             - "1433:1433"
         volumes:
-            - mssql:/var/lib/mssql/data
-            - sqlsystem:/var/opt/mssql
-            - sqldata:/var/opt/sqlserver/data
+            - mssql-data:/var/opt/mssql
             - /etc/timezone:/etc/timezone:ro
             - /etc/localtime:/etc/localtime:ro
         healthcheck:
-            test: ["CMD", "sqlcmd", "-U", "sa", "-P", "qXz999W7M#", "-Q", "SELECT 1"]
+            test: ["CMD", "/opt/mssql-tools/bin/sqlcmd", "-S", "localhost", "-U", "sa", "-P", "qXz999W7M#", "-Q", "SELECT 1"]
             interval: 30s
             timeout: 10s
             retries: 5
@@ -38,7 +36,7 @@ services:
           RABBITMQ_DEFAULT_USER: guest
           RABBITMQ_DEFAULT_PASS: guest
         volumes:
-          - rabbitmq_data:/var/lib/rabbitmq
+          - rabbitmq-data:/var/lib/rabbitmq
         networks:
             - notifyme-network
 
@@ -52,7 +50,6 @@ services:
         restart: always
         environment:
             - ASPNETCORE_ENVIRONMENT=Production
-#            - ASPNETCORE_URLS=https://+:443;http://+:80
             - ASPNETCORE_URLS=http://+:80
         volumes:
             - /etc/timezone:/etc/timezone:ro
@@ -60,10 +57,10 @@ services:
         ports:
             - "63349:80"
         healthcheck:
-            test: ["CMD-SHELL", "curl -i http://localhost:80 || exit 1"]
-            interval: 10s
-            timeout: 5s
-            retries: 3
+            test: ["CMD-SHELL", "curl -i http://localhost:80/swagger/index.html || exit 1"]
+            interval: 30s
+            timeout: 15s
+            retries: 5
             start_period: 10s
         depends_on: 
             - mssql-server
@@ -72,10 +69,10 @@ services:
             - notifyme-network
 
 volumes:
-  mssql:
-  sqlsystem:
-  sqldata:
-  rabbitmq_data:
+  mssql-data:
+    # driver: local
+  rabbitmq-data:
+    # driver: local
 
 networks:
     notifyme-network:
