--- a/NotifyMe.API/appsettings.json
+++ b/NotifyMe.API/appsettings.json
@@ -11,9 +11,14 @@
     "QueueName": "NotifyMeQueue",
     "RetryCount": "5",
     "DispatchConsumersAsync": true
-    //    "BrokerName": "test_broker",
-    //    "AutofacScopeName": "test_autofac",
-    //    "VirtualHost": "your_virtual_host",
+  },
+  "MailService": {
+    "Host": "smtp.mail.ru",
+    "Port": 587,
+    "Credentials": {
+      "Username": "7119967@mail.ru",
+      "Password": "znJ57bDQvWXiJDupLybE"
+    }
   },
   "Logging": {
     "LogLevel": {
