--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -55,7 +55,7 @@ services:
             - /etc/timezone:/etc/timezone:ro
             - /etc/localtime:/etc/localtime:ro
         ports:
-            - "63349:80"
+            - "8888:80"
         healthcheck:
             test: ["CMD-SHELL", "curl -i http://localhost:80/swagger/index.html || exit 1"]
             interval: 30s
@@ -74,5 +74,8 @@ networks:
 
 volumes:
     mssql-data:
-#    mssql-logs:
+        name: mssql-data
+        external: true
     rabbitmq-data:
+        name: rabbitmq-data
+        external: true
